# StromaV

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  StromaV-plugins.rootrc.in  StromaVConfig.cmake.in  TODO  contributors.txt  defaults.cfg  defaults.cfg.depr  event.proto  pipeline_reports.proto  py-test.py  refactor.sh  sV.yml
apps/: CMakeLists.txt  README.md
apps/mdlv/: CMakeLists.txt  README.md
apps/mdlv/inc/: app_mdlv.hpp  dummy_PG.hh  dummy_PhL.hh
apps/mdlv/src/: app_mdlv.cpp  dummy_PG.cc  dummy_PhL.cc  main.cpp
apps/pipeline/: CMakeLists.txt  README.md
apps/pipeline/bash_completion/: afpipe.bash.in
apps/pipeline/inc/: pipeline_app.hpp
apps/pipeline/pipelines.example/: one.yml
apps/pipeline/src/: main.cpp  pipeline_app.cpp
apps/svmc/: CMakeLists.txt
apps/svmc/inc/: app_g4simulation.hpp  nsp_scorer.tcc
apps/svmc/inc/actions/: EventAction.hpp  TrackingAction.hpp
apps/svmc/src/: app_g4simulation.cpp  main.cpp
apps/svmc/src/actions/: EventAction.cpp  TrackingAction.cpp
apps/svmc/src/detectors/: ecal_SD.cpp  p348_ecal_SD.cpp  p348_srdet_SD.cpp  srdet_SD.cpp
apps/svmc/src/fields/: magField.cpp  p348_magField.cpp
apps/ut/: CMakeLists.txt  collateral.cpp  main.cpp  md-test-common.cpp  md-test-common.hpp  md-test1.cpp  md-test2.cpp  pipe_manifold.cpp  pipeline.cpp
assets/grammar/: README.md  dsul.l  dsul.y
cmake/: ROOTAuxDicts.cmake  g4_dynamic_physics.cmake  sV_find_pkgs.cmake
conf/: 00_sV.yml.in  05_sV_logs.yml  10_sV-generic.yml  25_sV-compressors.yml  30_sV-analysis.yml  35_sV-geant4.yml  50_sV-generic.yml
doc/: Doxyfile  Doxyfile.in
doc/analysis/: pipeline-en.md  pipeline-ru.md
doc/diagrams/: Metadata.mdj  Pipeline.mdj
doc/src/: StromaV.qbk  StromaV.xml
examples/: README.md  aprime_cs.c
examples/utilizing/analysis/: custom_data_source.cpp
examples/utilizing/application/: custom_data_source.cpp  my_application.cpp  task_driven_task.cpp
inc/: config.h.in  ctrs_dict.hpp  detector_ids.h  detector_ids.hpp  imetadata.itcc  logging.hpp  mCastReceiver.hpp  mCastSender.hpp  metadata.h  metadata.hpp  metadata_store.tcc  uevent.hpp  utils.h  utils.hpp  yaml-adapter.hpp
inc/alignment/: CompoundDetector.hpp  DetCtrDict.hpp  DetectorsSet.hpp  DrawableDetector.hpp  HitGraphics.hpp  Placement.hpp  README.md  ReceptiveDetector.hpp  TrackingGroup.hpp  TrackingGroupLinkDef.h  TrackingVolume.tcc  iDetector.hpp
inc/analysis/: .pipe_fj.hpp.depr  .pipe_watcher.hpp.depr  dictionary.hpp  evSource_RA.tcc  evSource_batch.tcc  evSource_bulk.tcc  evSource_identifiable.tcc  evSource_sectional.tcc  event_source.tcc  identifiable_ev_source.tcc  pipe.tcc  pipe_builder.hpp  pipeline.hpp  ra_event_source.itcc  ra_event_source.tcc  xform.tcc
inc/analysis/dsources/: svbs.hpp
inc/analysis/pipeline/: basic.tcc  fork.tcc  fork_junction.tcc  manifold.tcc
inc/analysis/processors/: benchmark.hpp  bucketer.hpp  evMCast.hpp  evSend.hpp  evStore.hpp  evStreamDispatch.hpp  testProc.hpp
inc/app/: abstract.hpp  analysis.hpp  analysis_cat_mx.tcc  app.h  ascii_display.hpp  collateral_job.tcc  cvalidators.hpp  implement_app.hpp  py_session.hpp  task_driven.hpp
inc/app/mixins/: alignment.hpp  geant4.hpp  protobuf.hpp  root.hpp
inc/buckets/: ComprBucketDispatcher.hpp  PlainStreamBucketDispatcher.hpp  compressedDispatcher.hpp  compressed_bdsp.hpp  iBucketDispatcher.hpp  iBundlingDispatcher.hpp  iDispatcher.hpp  iTPlainBufferDispatcher.tcc  plainStreamDispatcher.hpp  plain_bdsp.hpp
inc/compr/: DummyCompressor.hpp  iCompressor.hpp
inc/compression/: bzip2.hpp  dummy.hpp  iCompressor.hpp  iDecompressor.hpp  lzma.hpp  trivial.hpp  zlib.hpp
inc/decompr/: DummyDecompressor.hpp  iDecompressor.hpp
inc/g4extras/: CreateDestroyStats_TA.hpp  PGA.hpp  PhysList.hpp  eHandler.hpp
inc/g4extras/PGA/: simpleGun.hh
inc/g4extras/auto.in/: Particles.ihpp.in  PhysList.ihpp.in  Physics.ihpp.in
inc/g4extras/physics/: SynchrotronRadiation.hpp
inc/metadata/: batch_handle.tcc  c_types.h  dictionary.tcc  store.tcc  traits.tcc  type.tcc  type_base.hpp  type_cached.tcc
inc/net/: client.hpp  peer.hpp  server.hpp  tracker.hpp
py/: CMakeLists.txt  __init__.py.in  _commonProtobuf.i  _gooExceptionWrapper.i  _repeatedPBAcess.i.draft  _sV_utility.i  analysis.i  app.i  appBase.i  appUtils.i  buckets.i  detectorIds.i  detector_ids.i  events.i  extParameters.i  gooDict.i  gooException.py  gooVCopy.i  pipeline.i  sVEvents.i  setup.py.in  std_stream.i  std_unique_ptr.i
py/tests/: __init__.py  gooDict_test.py  test_detectorsIds.py  test_gooDict.py  test_pipe.py
rootPlugins/: CMakeLists.txt  README.md
rootPlugins/4eventDisplay/: projections.C
rootPlugins/CommandWidget/: CMakeLists.txt  P348CommandWidgetPlugin.cxx  P348CommandWidgetPlugin.h  P348CommandWidgetPluginLinkDef.h
scripts/: get_g4Particles.sh  get_phLists.sh  get_physics.sh
src/: ctrs_dict.cpp  detector_ids.c  detector_ids.cpp  logging.cpp  mCastReceiver.cpp  mCastSender.cpp  metadata.cpp  utils.c  utils.cpp  yaml-adapter.cpp
src/alignment/: CompoundDetector.cpp  DetCtrDict.cpp  DetectorsSet.cpp  DrawableDetector.cpp  Placement.cpp  ReceptiveDetector.cpp  TrackingGroup.cpp  TrackingVolume.cpp  iDetector.cpp
src/analysis/: .pipe_watcher.cpp.depr  dictionary.cpp  pipe_builder.cpp  pipe_watcher.cpp  pipeline.cpp
src/analysis/dsources/: svbp.cpp
src/app/: abstract.cpp  analysis.cpp  app.cpp  ascii_display.cpp  cvalidators.cpp  py_session.cpp  task_driven.cpp
src/buckets/: ComprBucketDispatcher.cpp  PlainStreamBucketDispatcher.cpp  compressedDispatcher.cpp  compressed_bdsp.cpp  iBucketDispatcher.cpp  iBundlingDispatcher.cpp  iDispatcher.cpp  plainStreamDispatcher.cpp  plain_bdsp.cpp
src/compr/: DummyCompressor.cpp  iCompressor.cpp
src/compression/: bzip2.cpp  dummy.cpp  iCompressor.cpp  iDecompressor.cpp  lzma.cpp  trivial.cpp  zlib.cpp
src/decompr/: DummyDecompressor.cpp  iDecompressor.cpp
src/g4extras/: CreateDestroyStats_TA.cpp  PGA.cpp  PhysList.cpp  eHandler.cpp
src/metadata/: c_types.cpp
src/net/: client.cpp  mCastReceiver.cpp  mCastSender.cpp  peer.cpp  server.cpp
(+26 files in other folders)
